@@ -1,5 +1,6 @@
 import functools
 import itertools
+import mmap
 import os
 import signal
 import sys
@@ -12,8 +13,6 @@ import numpy as np
 
 __all__ = ['Extendable', 'register_extension', 'register_extensions',
            'unregister_extensions']
-
-from numpy import memmap as Memmap
 
 
 BLOCK_SIZE = 2880  # the FITS block size
@@ -790,17 +789,17 @@ def _tmp_name(input):
     return fn
 
 
-def _get_array_memmap(array):
+def _get_array_mmap(array):
     """
-    If the array has a numpy.memmap as one of its bases, return the memmap
-    base; otherwise return None.
+    If the array has an mmap.mmap at base of its base chain, return the mmap
+    object; otherwise return None.
     """
 
-    if isinstance(array, Memmap):
+    if isinstance(array, mmap.mmap):
         return array
 
     base = array
     while hasattr(base, 'base') and base.base is not None:
-        if isinstance(base.base, Memmap):
+        if isinstance(base.base, mmap.mmap):
             return base.base
         base = base.base
